--- a/pages/apply/mine/verify-tel/verify-tel.wxss
+++ b/pages/apply/mine/verify-tel/verify-tel.wxss
@@ -7,7 +7,7 @@ page{
     justify-content: space-between;
     align-items: center;
 }
-.vt-code wux-input{
+.vt-code input{
     flex: 1;
 }
 .vt-code text{
