--- a/pages/common/comment-replay/comment-replay.wxss
+++ b/pages/common/comment-replay/comment-replay.wxss
@@ -1,19 +1,34 @@
-page{
-    background-color: white;
-}
 .cr-box{
    padding: 40rpx;
 }
 .cr-b{
-    background-color: rgba(0, 0, 0, 0.06); padding: 20rpx;
+    background-color: rgba(0, 0, 0, 0.06);
+    padding: 20rpx;
 }
 .cr-textarea{
-    font-size: 30rpx;  width: 100%; height: 200rpx; line-height: 1.4;
+    font-size: 30rpx;
+    width: 100%;
+    height: 200rpx;
+    line-height: 1.4;
 }
-.cr-link{display: flex; justify-content: space-between; padding-top: 20rpx; align-items: center; }
-.cr-link text{ font-size: 24rpx; color: #999999; }
+.cr-link{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20rpx;
+    align-items: center;
+}
+.cr-link text{
+    font-size: 24rpx;
+    color: #999999;
+}
 .cr-btn{
-     border-radius: 0; margin: 0; border: 0 !important; line-height: normal; padding: 16rpx 50rpx; font-size: 30rpx; background-color: rgba(0, 0, 0, 0.06) !important;
+    border-radius: 6rpx;
+    margin: 0 !important;
+    border: 0 !important;
+    line-height: normal;
+    padding: 16rpx 50rpx;
+    font-size: 30rpx;
+    background-color: rgba(0, 0, 0, 0.06) !important;
     color: #999999 !important;
 }
 .cr-btn.checked{
