--- a/pages/common/comment/comment.wxml
+++ b/pages/common/comment/comment.wxml
@@ -9,40 +9,41 @@
 
 <view class="container">
     <block wx:if="{{content.list.length > 0}}">
-      <view class="comment-sub" wx:for="{{content.list}}" wx:key="{{item.CommentID}}">
+      <view class="comment-sub" wx:for="{{content.list}}" wx:key="comment_id">
           <view class="flex _first">
-              <image src="{{item.avatar_url}}" mode="widthFix"></image>
-              <text class="_name color-999">{{item.Caption}}</text>
+              <image src="{{item.avatar_url}}" mode="aspectFill"></image>
+              <text class="_name color-999">{{item.caption}}</text>
               <text class="_delete event-hover-class"
-                    wx:if="{{item.UserID === userInfo.UserID}}"
-                    data-commentid="{{item.CommentID}}"
-                    data-myself="{{item.UserID === userInfo.UserID}}"
+                    wx:if="{{item.user_id === userInfo.user_id}}"
+                    data-commentid="{{item.comment_id}}"
+                    data-myself="{{item.user_id === userInfo.user_id}}"
                     bindtap="operationEvent">
                   <text class="iconfont icon-diandian color-999 font-15"></text>
               </text>
           </view>
-          <view class="_content font-16 mt-10">{{item.Content}}</view>
+          <view class="_content font-16 mt-10">{{item.content}}</view>
           <view class="_minor font-14 mt-10" wx:if="{{item.child.length>0}}">
               <!--回复-->
               <view class="{{i===0?'':'mt-10'}}"
                     wx:for="{{item.child}}"
                     wx:for-index="i"
                     wx:for-item="j"
-                    wx:key="{{j.CommentID}}"
-                    data-commentid="{{j.CommentID}}"
-                    data-myself="{{j.UserID === userInfo.UserID}}"
+                    wx:key="comment_id"
+                    data-commentid="{{j.comment_id}}"
+                    data-myself="{{j.user_id === userInfo.user_id}}"
                     bindlongpress="operationEvent">
-                  <text class="_name font-12">{{j.UserID === userInfo.UserID?'我' : j.Caption}}：</text>
-                  <text class="_del">{{j.Content}}</text>
+                  <text class="_name font-12">{{j.user_id === userInfo.user_id?'我' : j.caption}}：</text>
+                  <text class="_del">{{j.content}}</text>
               </view>
               <!--回复-->
 
           </view>
           <view class="_opera mt-10">
-              <text class="font-10 color-999">{{moduleComment.resolveTime(item.AddTime)}}</text>
-              <text class="event-hover-class _reply" bindtap="commentSingleFocusEvent"
-                    data-commentid="{{item.CommentID}}"
-                    data-name="{{item.Caption}}">回复TA</text>
+              <text class="font-10 color-999">{{moduleComment.resolveTime(item.add_time)}}</text>
+              <text class="event-hover-class _reply"
+                    bindtap="commentSingleFocusEvent"
+                    data-commentid="{{item.comment_id}}"
+                    data-name="{{item.caption}}">回复TA</text>
           </view>
       </view>
     </block>
