--- a/pages/tabBar/find/find.wxml
+++ b/pages/tabBar/find/find.wxml
@@ -5,7 +5,7 @@
   <view class="newCourse-box" wx:if="{{courseList.length>0}}">
       <view class="_title">近期更新</view>
       <swiper autoplay="{{swiper.autoplay}}" interval="{{swiper.interval}}" duration="{{swiper.duration}}">
-        <block wx:for="{{courseList}}" wx:key="{{index}}">
+        <block wx:for="{{courseList}}" wx:key="course_id">
           <swiper-item>
             <view class="newCourse-con flex between" bindtap="goPageEvent" data-id="{{item.course_id}}">
               <view class="newCourse-font">
@@ -50,56 +50,57 @@
     <!--<view class="watch-time"><text>今天</text><text>Today</text></view>-->
     <view class="watch-box">
 
-      <block wx:if="{{contentMultiple.list.length>0}}">
-        <view class="watch-single" wx:for="{{contentMultiple.list}}" wx:key="*this">
-          <view class="data-single">
+      <view class="watch-single" wx:for="{{contentMultiple.list}}" wx:key="*this">
+        <view class="data-single">
 
-            <view class="watch-info-a" catchtap="goUserEvent" data-id="{{item.UserID}}">
-              <image lazy-load src="{{item.avatar_url}}" mode="aspectFill"/>
-              <text class="_cap ml-10 mr-10">{{item.Caption}}</text>
-              <text>录制了</text>
-            </view>
-            <view class="watch-info-b" catchtap="goRecordEvent" data-id="{{item.RecordID}}">
-              <!--pic-->
-              <view class="bs-single">
-                <view class="_insert">
-                  <view class="_image">
-                    <view><image src="{{item.CoverURL}}" lazy-load mode="aspectFill"/></view>
-                  </view>
-                </view>
-              </view>
-              <!--info-->
-              <view class="watch-info-f">
-                <view class="_n color-Primary">{{item.Name}}</view>
-                <view class="_d color-999">{{item.Desc}}</view>
-                <view class="_k flex">
-                  <view><text class="_count">{{moduleFind.filterText(item.viewCount)}}</text><text>次观看</text></view>
-                  <view><text class="_count">{{moduleFind.filterText(item.likeCount)}}</text><text>个赞</text></view>
-                </view>
-              </view>
-            </view>
-
-            <view class="watch-info-k flex">
-              <view><text class="_count">{{moduleFind.resolveTime(item.AddTime)}}</text></view>
-              <view catchtap="goCommentEvent" data-id="{{item.RecordID}}" class="_comment" hover-class="basic-hover">
-                <text class="iconfont icon-liuyan"></text>
-                <text class="_count ml-5">{{moduleFind.filterText(item.commentCount)}}</text>
-                <text class="ml-20">我说说</text>
-              </view>
-            </view>
-
+          <view class="watch-info-a" catchtap="goUserEvent" data-id="{{item.user_id}}">
+            <image lazy-load src="{{item.avatar_url}}" mode="aspectFill"/>
+            <text class="_cap ml-10 mr-10">{{item.caption}}</text>
+            <text>录制了</text>
           </view>
+          <view class="watch-info-b" catchtap="goRecordEvent" data-id="{{item.record_id}}">
+            <!--pic-->
+            <view class="bs-single">
+              <view class="_insert">
+                <view class="_image"><image src="{{item.cover_url}}" lazy-load mode="aspectFill"/></view>
+              </view>
+            </view>
+            <!--info-->
+            <view class="watch-info-f">
+              <view class="_n color-Primary">{{item.name}}</view>
+              <view class="_d color-999">{{item.desc}}</view>
+              <view class="_k flex">
+                <view><text class="_count">{{moduleFind.filterText(item.view_count)}}</text><text>次观看</text></view>
+                <view><text class="_count">{{moduleFind.filterText(item.like_count)}}</text><text>个赞</text></view>
+              </view>
+            </view>
+          </view>
+
+          <view class="watch-info-k flex">
+            <view><text class="_count">{{moduleFind.resolveTime(item.add_time)}}</text></view>
+            <view catchtap="goCommentEvent" data-id="{{item.record_id}}" class="_comment" hover-class="basic-hover">
+              <text class="iconfont icon-liuyan"></text>
+              <text class="_count ml-5">{{moduleFind.filterText(item.comment_count)}}</text>
+              <text class="ml-20">我说说</text>
+            </view>
+          </view>
+
         </view>
-      </block>
-      <view wx:else class="watch-single-nodata">太懒了，都没人把作品分享出来</view>
-      <view wx:if="{{record.lastPage}}" class="watch-single-nodata">额，数据到底了</view>
+      </view>
+      <view wx:if="{{contentMultiple.list.length<=0}}" class="watch-single-nodata">太懒了，都没人把作品分享出来</view>
+      <view wx:if="{{contentMultiple.lastPage && contentMultiple.list.length>0}}" class="watch-single-nodata">额，数据到底了</view>
     </view>
   </view>
 
   <!-- hot -->
   <view wx:else class="hot-box">
 
-    <view class="hot-listSingle" wx:for="{{contentMultiple.list}}" wx:key="course_id" bindtap="goDetailEvent" data-index="{{index}}">
+    <view class="hot-listSingle"
+          wx:for="{{contentMultiple.list}}"
+          wx:key="course_id"
+          bindtap="goDetailEvent"
+          data-id="{{item.data_id}}"
+          data-format="{{item.format}}">
       <view class="clear hot-listSingle-h">
         <view class="_img">
           <image src="{{item.cover_url}}" mode="aspectFill" lazy-load></image>
@@ -113,7 +114,7 @@
         </view>
       </view>
     </view>
-    <view wx:if="{{hot.lastPage}}" class="watch-single-nodata">额，数据到底了</view>
+    <view wx:if="{{contentMultiple.lastPage && contentMultiple.list.length > 0}}" class="watch-single-nodata">额，数据到底了</view>
   </view>
 
 </view>
